process instance status update action
