# api/api.pb.gw.go
@@ -829,7 +829,7 @@ func local_request_WedoService_ProcessInstanceGet_0(ctx context.Context, marshal
 
 }
 
-func request_WedoService_ProcessModify_0(ctx context.Context, marshaler runtime.Marshaler, client WedoServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+func request_WedoService_ProcessInstanceModify_0(ctx context.Context, marshaler runtime.Marshaler, client WedoServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
 	var protoReq ProcessModifyRequest
 	var metadata runtime.ServerMetadata
 
@@ -858,12 +858,12 @@ func request_WedoService_ProcessModify_0(ctx context.Context, marshaler runtime.
 		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "process_instance_id", err)
 	}
 
-	msg, err := client.ProcessModify(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	msg, err := client.ProcessInstanceModify(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
 	return msg, metadata, err
 
 }
 
-func local_request_WedoService_ProcessModify_0(ctx context.Context, marshaler runtime.Marshaler, server WedoServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+func local_request_WedoService_ProcessInstanceModify_0(ctx context.Context, marshaler runtime.Marshaler, server WedoServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
 	var protoReq ProcessModifyRequest
 	var metadata runtime.ServerMetadata
 
@@ -892,16 +892,16 @@ func local_request_WedoService_ProcessModify_0(ctx context.Context, marshaler ru
 		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "process_instance_id", err)
 	}
 
-	msg, err := server.ProcessModify(ctx, &protoReq)
+	msg, err := server.ProcessInstanceModify(ctx, &protoReq)
 	return msg, metadata, err
 
 }
 
 var (
-	filter_WedoService_ProcessActivateSuspend_0 = &utilities.DoubleArray{Encoding: map[string]int{"process_instance_id": 0}, Base: []int{1, 1, 0}, Check: []int{0, 1, 2}}
+	filter_WedoService_ProcessInstanceActivateSuspend_0 = &utilities.DoubleArray{Encoding: map[string]int{"process_instance_id": 0}, Base: []int{1, 1, 0}, Check: []int{0, 1, 2}}
 )
 
-func request_WedoService_ProcessActivateSuspend_0(ctx context.Context, marshaler runtime.Marshaler, client WedoServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+func request_WedoService_ProcessInstanceActivateSuspend_0(ctx context.Context, marshaler runtime.Marshaler, client WedoServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
 	var protoReq ProcessActivateSuspendRequest
 	var metadata runtime.ServerMetadata
 
@@ -925,16 +925,16 @@ func request_WedoService_ProcessActivateSuspend_0(ctx context.Context, marshaler
 	if err := req.ParseForm(); err != nil {
 		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
 	}
-	if err := runtime.PopulateQueryParameters(&protoReq, req.Form, filter_WedoService_ProcessActivateSuspend_0); err != nil {
+	if err := runtime.PopulateQueryParameters(&protoReq, req.Form, filter_WedoService_ProcessInstanceActivateSuspend_0); err != nil {
 		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
 	}
 
-	msg, err := client.ProcessActivateSuspend(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
+	msg, err := client.ProcessInstanceActivateSuspend(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
 	return msg, metadata, err
 
 }
 
-func local_request_WedoService_ProcessActivateSuspend_0(ctx context.Context, marshaler runtime.Marshaler, server WedoServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
+func local_request_WedoService_ProcessInstanceActivateSuspend_0(ctx context.Context, marshaler runtime.Marshaler, server WedoServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
 	var protoReq ProcessActivateSuspendRequest
 	var metadata runtime.ServerMetadata
 
@@ -958,11 +958,11 @@ func local_request_WedoService_ProcessActivateSuspend_0(ctx context.Context, mar
 	if err := req.ParseForm(); err != nil {
 		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
 	}
-	if err := runtime.PopulateQueryParameters(&protoReq, req.Form, filter_WedoService_ProcessActivateSuspend_0); err != nil {
+	if err := runtime.PopulateQueryParameters(&protoReq, req.Form, filter_WedoService_ProcessInstanceActivateSuspend_0); err != nil {
 		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
 	}
 
-	msg, err := server.ProcessActivateSuspend(ctx, &protoReq)
+	msg, err := server.ProcessInstanceActivateSuspend(ctx, &protoReq)
 	return msg, metadata, err
 
 }
@@ -2081,18 +2081,18 @@ func RegisterWedoServiceHandlerServer(ctx context.Context, mux *runtime.ServeMux
 
 	})
 
-	mux.Handle("PUT", pattern_WedoService_ProcessModify_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+	mux.Handle("PUT", pattern_WedoService_ProcessInstanceModify_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
 		var stream runtime.ServerTransportStream
 		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
 		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
-		rctx, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/github.com.wedo_workflow.wedo.WedoService/ProcessModify", runtime.WithHTTPPathPattern("/process-instance/{process_instance_id}"))
+		rctx, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/github.com.wedo_workflow.wedo.WedoService/ProcessInstanceModify", runtime.WithHTTPPathPattern("/process-instance/{process_instance_id}"))
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
 		}
-		resp, md, err := local_request_WedoService_ProcessModify_0(rctx, inboundMarshaler, server, req, pathParams)
+		resp, md, err := local_request_WedoService_ProcessInstanceModify_0(rctx, inboundMarshaler, server, req, pathParams)
 		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
 		ctx = runtime.NewServerMetadataContext(ctx, md)
 		if err != nil {
@@ -2100,22 +2100,22 @@ func RegisterWedoServiceHandlerServer(ctx context.Context, mux *runtime.ServeMux
 			return
 		}
 
-		forward_WedoService_ProcessModify_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+		forward_WedoService_ProcessInstanceModify_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
-	mux.Handle("POST", pattern_WedoService_ProcessActivateSuspend_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+	mux.Handle("POST", pattern_WedoService_ProcessInstanceActivateSuspend_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
 		var stream runtime.ServerTransportStream
 		ctx = grpc.NewContextWithServerTransportStream(ctx, &stream)
 		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
-		rctx, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/github.com.wedo_workflow.wedo.WedoService/ProcessActivateSuspend", runtime.WithHTTPPathPattern("/process-instance/{process_instance_id}/suspended"))
+		rctx, err := runtime.AnnotateIncomingContext(ctx, mux, req, "/github.com.wedo_workflow.wedo.WedoService/ProcessInstanceActivateSuspend", runtime.WithHTTPPathPattern("/process-instance/{process_instance_id}/suspended"))
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
 		}
-		resp, md, err := local_request_WedoService_ProcessActivateSuspend_0(rctx, inboundMarshaler, server, req, pathParams)
+		resp, md, err := local_request_WedoService_ProcessInstanceActivateSuspend_0(rctx, inboundMarshaler, server, req, pathParams)
 		md.HeaderMD, md.TrailerMD = metadata.Join(md.HeaderMD, stream.Header()), metadata.Join(md.TrailerMD, stream.Trailer())
 		ctx = runtime.NewServerMetadataContext(ctx, md)
 		if err != nil {
@@ -2123,7 +2123,7 @@ func RegisterWedoServiceHandlerServer(ctx context.Context, mux *runtime.ServeMux
 			return
 		}
 
-		forward_WedoService_ProcessActivateSuspend_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+		forward_WedoService_ProcessInstanceActivateSuspend_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -2827,43 +2827,43 @@ func RegisterWedoServiceHandlerClient(ctx context.Context, mux *runtime.ServeMux
 
 	})
 
-	mux.Handle("PUT", pattern_WedoService_ProcessModify_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+	mux.Handle("PUT", pattern_WedoService_ProcessInstanceModify_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
 		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
-		rctx, err := runtime.AnnotateContext(ctx, mux, req, "/github.com.wedo_workflow.wedo.WedoService/ProcessModify", runtime.WithHTTPPathPattern("/process-instance/{process_instance_id}"))
+		rctx, err := runtime.AnnotateContext(ctx, mux, req, "/github.com.wedo_workflow.wedo.WedoService/ProcessInstanceModify", runtime.WithHTTPPathPattern("/process-instance/{process_instance_id}"))
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
 		}
-		resp, md, err := request_WedoService_ProcessModify_0(rctx, inboundMarshaler, client, req, pathParams)
+		resp, md, err := request_WedoService_ProcessInstanceModify_0(rctx, inboundMarshaler, client, req, pathParams)
 		ctx = runtime.NewServerMetadataContext(ctx, md)
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
 		}
 
-		forward_WedoService_ProcessModify_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+		forward_WedoService_ProcessInstanceModify_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
-	mux.Handle("POST", pattern_WedoService_ProcessActivateSuspend_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
+	mux.Handle("POST", pattern_WedoService_ProcessInstanceActivateSuspend_0, func(w http.ResponseWriter, req *http.Request, pathParams map[string]string) {
 		ctx, cancel := context.WithCancel(req.Context())
 		defer cancel()
 		inboundMarshaler, outboundMarshaler := runtime.MarshalerForRequest(mux, req)
-		rctx, err := runtime.AnnotateContext(ctx, mux, req, "/github.com.wedo_workflow.wedo.WedoService/ProcessActivateSuspend", runtime.WithHTTPPathPattern("/process-instance/{process_instance_id}/suspended"))
+		rctx, err := runtime.AnnotateContext(ctx, mux, req, "/github.com.wedo_workflow.wedo.WedoService/ProcessInstanceActivateSuspend", runtime.WithHTTPPathPattern("/process-instance/{process_instance_id}/suspended"))
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
 		}
-		resp, md, err := request_WedoService_ProcessActivateSuspend_0(rctx, inboundMarshaler, client, req, pathParams)
+		resp, md, err := request_WedoService_ProcessInstanceActivateSuspend_0(rctx, inboundMarshaler, client, req, pathParams)
 		ctx = runtime.NewServerMetadataContext(ctx, md)
 		if err != nil {
 			runtime.HTTPError(ctx, mux, outboundMarshaler, w, req, err)
 			return
 		}
 
-		forward_WedoService_ProcessActivateSuspend_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
+		forward_WedoService_ProcessInstanceActivateSuspend_0(ctx, mux, outboundMarshaler, w, req, resp, mux.GetForwardResponseOptions()...)
 
 	})
 
@@ -3167,9 +3167,9 @@ var (
 
 	pattern_WedoService_ProcessInstanceGet_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 1, 0, 4, 1, 5, 1}, []string{"process-instance", "process_instance_id"}, ""))
 
-	pattern_WedoService_ProcessModify_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 1, 0, 4, 1, 5, 1}, []string{"process-instance", "process_instance_id"}, ""))
+	pattern_WedoService_ProcessInstanceModify_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 1, 0, 4, 1, 5, 1}, []string{"process-instance", "process_instance_id"}, ""))
 
-	pattern_WedoService_ProcessActivateSuspend_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 1, 0, 4, 1, 5, 1, 2, 2}, []string{"process-instance", "process_instance_id", "suspended"}, ""))
+	pattern_WedoService_ProcessInstanceActivateSuspend_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 1, 0, 4, 1, 5, 1, 2, 2}, []string{"process-instance", "process_instance_id", "suspended"}, ""))
 
 	pattern_WedoService_TaskCreate_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"task", "create"}, ""))
 
@@ -3235,9 +3235,9 @@ var (
 
 	forward_WedoService_ProcessInstanceGet_0 = runtime.ForwardResponseMessage
 
-	forward_WedoService_ProcessModify_0 = runtime.ForwardResponseMessage
+	forward_WedoService_ProcessInstanceModify_0 = runtime.ForwardResponseMessage
 
-	forward_WedoService_ProcessActivateSuspend_0 = runtime.ForwardResponseMessage
+	forward_WedoService_ProcessInstanceActivateSuspend_0 = runtime.ForwardResponseMessage
 
 	forward_WedoService_TaskCreate_0 = runtime.ForwardResponseMessage
 
